<?php

class Dette
{
    public int $id;

    public function __construct(

        int $id = 0
    ) {
        $this->id = $id;
    }
}